--- a/Pipfile
+++ b/Pipfile
@@ -4,11 +4,26 @@ verify_ssl = true
 name = "pypi"
 
 [packages]
-pyspark = "*"
-pytest = "*"
+kafka-python = "==2.0.2"
+pyspark = "==4.0.1"
+faust = "==1.10.4"
+pandas = "==2.2.2"
+pyarrow = "==17.0.0"
+protobuf = "==5.28.2"
+fastavro = "==1.9.4"
+psycopg2-binary = "==2.9.9"
+mysql-connector-python = "==9.0.0"
+pymongo = "==4.8.0"
+flask = "==3.0.3"
+fastapi = "==0.115.0"
+uvicorn = "==0.30.6"
+cryptography = "==43.0.3"
+pyjwt = "==2.9.0"
+prometheus-client = "==0.20.0"
+loguru = "==0.7.2"
+pytest = "==8.3.3"
 
 [dev-packages]
 
 [requires]
 python_version = "3.11"
-
