--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,8 @@
 # Core streaming and processing
-kafka-python==2.0.2
+kafka-python==1.4.7       # compatible with robinhood-aiokafka
 pyspark==4.0.1
 faust==1.10.4
+click==7.1.2              # required by Faust
 
 # Data handling & serialization
 pandas==2.2.2
@@ -15,7 +16,7 @@ mysql-connector-python==9.0.0
 pymongo==4.8.0
 
 # API / microservices layer
-flask==3.0.3
+flask==2.0.3               # compatible with click<8
 fastapi==0.115.0
 uvicorn==0.30.6
 
